fixed design for dark mode

--- a/public/css/input.css
+++ b/public/css/input.css
@@ -2,10 +2,23 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Light Mode */
 .active-tab[aria-selected="true"] {
-  @apply text-blue-600  border-blue-100 hover:bg-blue-50 lg:hover:text-blue-600 lg:p-0 dark:text-blue-400 lg:dark:hover:text-white dark:hover:bg-blue-600 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-blue-600;
+  @apply text-blue-600 border-blue-100 hover:bg-blue-50 lg:hover:text-blue-600 lg:p-0;
 }
-  
+
 .active-tab[aria-selected="false"] {
-  @apply text-gray-600  border-gray-100 hover:bg-gray-50 lg:hover:text-blue-600 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-600 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-600;
+  @apply text-gray-600 border-gray-100 hover:bg-gray-50 lg:hover:text-blue-600 lg:p-0;
+}
+
+/* Dark Mode */
+@media (prefers-color-scheme: dark) {
+  .active-tab[aria-selected="true"] {
+    @apply text-white border-transparent lg:hover:bg-transparent lg:border-0 lg:hover:text-white;
+    background-color: transparent !important;
+  }
+
+  .active-tab[aria-selected="false"] {
+    @apply text-blue-600 border-transparent lg:hover:bg-transparent lg:border-0 lg:hover:text-white;
+  }
 }
